@@ -1020,10 +1020,22 @@ GMT_LONG GMT_psxy (struct GMTAPI_CTRL *API, GMT_LONG mode, void *args)
 				 * but reallocating x below lead to disasters.  */
 
 				change = GMT_parse_segment_header (GMT, L->header, P, &fill_active, &current_fill, default_fill, &outline_active, &current_pen, default_pen, default_outline, L->ogr);
+				
 
 				if (P && P->skip) continue;	/* Chosen cpt file indicates skip for this z */
 
-				if (L->header && L->header[0]) PSL_comment (PSL, "Segment header: %s\n", L->header);
+				if (L->header && L->header[0]) {
+					char s_args[GMT_BUFSIZ];
+					PSL_comment (PSL, "Segment header: %s\n", L->header);
+					if (GMT_parse_segment_item (GMT, L->header, "-S", s_args)) {	/* Found -S */
+						if ((S.symbol == GMT_SYMBOL_QUOTED_LINE && s_args[0] == 'q') || (S.symbol == GMT_SYMBOL_FRONT && s_args[0] == 'f')) { /* Update parameters */
+							GMT_parse_symbol_option (GMT, s_args, &S, 0, FALSE);
+							if (change & 1) change -= 1;	/* Don't want polygon to be TRUE later */
+						}
+						else
+							GMT_report (GMT, GMT_MSG_FATAL, "Segment header tries to switch from -S%c to another symbol (%s) - ignored\n", S.symbol, s_args);
+					}
+				}
 
 				if (Ctrl->I.active) {
 					GMT_illuminate (GMT, Ctrl->I.value, current_fill.rgb);
@@ -1063,7 +1075,7 @@ GMT_LONG GMT_psxy (struct GMTAPI_CTRL *API, GMT_LONG mode, void *args)
 					if ((GMT->current.plot.n = GMT_geo_to_xy_line (GMT, L->coord[GMT_X], L->coord[GMT_Y], L->n_rows)) == 0) continue;
 					GMT_plot_line (GMT, GMT->current.plot.x, GMT->current.plot.y, GMT->current.plot.pen, GMT->current.plot.n);
 				}
-				if (S.symbol == GMT_SYMBOL_FRONT) { /* Must draw fault crossbars */
+				if (S.symbol == GMT_SYMBOL_FRONT) { /* Must also draw fault crossbars */
 					GMT_setfill (GMT, &current_fill, outline_active);
 					GMT_draw_front (GMT, GMT->current.plot.x, GMT->current.plot.y, GMT->current.plot.n, &S.f);
 				}
