@@ -1,6 +1,16 @@
 -----------------------------------------------------------------------------------------
 	$Id$
 -----------------------------------------------------------------------------------------
+
+2012-02-07	pwessel
+	* psxy[z]:		For the two mixed symbol/line options -Sf and -Sq, we now
+				examine the segment header for any changes to these options.
+
+2012-02-07	jluis
+	* ps2raster.c:		On Windows the ghostscript executable path is now fetch from
+				the registry. In caise it fails, fall back to the old "get
+				it from the path" mechanism.
+
 2012-02-02	pwessel
 	* pslegend.c:		Did not process -U, and had usage message about obsolete -S
 	* gmt_proj.c:		For -JE, both projection center and antipode gave x = y = 0.
